--- a/package.json
+++ b/package.json
@@ -16,29 +16,25 @@
     "build": "node ./buildScript",
     "build-front": "react-scripts build",
     "eject": "react-scripts eject",
-    "start-server": "nodemon server/server.js --watch server/*",
+    "start-server": "nodemon server/index.js --watch index/*",
     "start-front": "react-scripts start",
     "start": "concurrently \"npm run start-server\" \"npm run start-front\" --kill-others --kill-others-on-fail",
     "test": "react-scripts test --env=jsdom"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.13.5",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
-    "axios": "0.19.2",
-    "bcrypt-nodejs": "^0.0.3",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "compression": "1.7.4",
     "connect-ensure-login": "^0.1.1",
-    "cors": "2.8.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
-    "express-session": "^1.17.1",
     "helmet": "3.22.0",
-    "jsonwebtoken": "^8.5.1",
     "knex": "0.20.13",
     "mongoose": "^5.11.9",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "passport-local-mongoose": "^6.0.1",
     "path": "^0.12.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
